Divide run into multiple commands

--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -11,10 +11,9 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - run: |
-        pip install -r requirements.txt
-        pre-commit run --all-files
-
+    - run: pip install -r requirements.txt
+    - run: pre-commit run --all-files
+        
   Check-Code-Unittests:
     runs-on: ubuntu-latest
     strategy:
@@ -25,23 +24,22 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - run: |
-        echo "# Backend settings" >> .env
-        echo "DEBUG=True" >> .env
-        echo "BACKEND_HOSTNAME=backend" >> .env
-        echo "BACKEND_PORT=8989" >> .env
-        echo "SECRET_KEY=some_random_secret" >> .env
-        echo "DJANGO_SUPERUSER_PASSWORD=i'masuperuserA12" >> .env
-        echo "DJANGO_SUPERUSER_USERNAME=admin" >> .env
-        echo "DJANGO_SUPERUSER_EMAIL=admin@gmail.com" >> .env
+    - run:    echo "# Backend settings" >> .env
+    - run:    echo "DEBUG=True" >> .env
+    - run:    echo "BACKEND_HOSTNAME=backend" >> .env
+    - run:    echo "BACKEND_PORT=8989" >> .env
+    - run:    echo "SECRET_KEY=some_random_secret" >> .env
+    - run:    echo "DJANGO_SUPERUSER_PASSWORD=i'masuperuserA12" >> .env
+    - run:    echo "DJANGO_SUPERUSER_USERNAME=admin" >> .env
+    - run:    echo "DJANGO_SUPERUSER_EMAIL=admin@gmail.com" >> .env
 
-        echo "# DB settings" >> .env
-        echo "POSTGRES_HOST=db" >> .env
-        echo "POSTGRES_NAME=db" >> .env
-        echo "POSTGRES_USER=user" >> .env
-        echo "POSTGRES_PASSWORD=postpassAWS59" >> .env
-        echo "POSTGRES_DB=db" >> .env
-        echo "PGPORT=5433" >> .env
+    - run:    echo "# DB settings" >> .env
+    - run:    echo "POSTGRES_HOST=db" >> .env
+    - run:    echo "POSTGRES_NAME=db" >> .env
+    - run:    echo "POSTGRES_USER=user" >> .env
+    - run:    echo "POSTGRES_PASSWORD=postpassAWS59" >> .env
+    - run:    echo "POSTGRES_DB=db" >> .env
+    - run:    echo "PGPORT=5433" >> .env
 
         echo "# RabbitMQ" >> .env
         echo "RABBITMQ_PORT=5673" >> .env
